--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -919,18 +919,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "homicidio['Homicidio_total'] = homicidio.loc[:, ['homicidio_doloso', 'homicidio_culposo_outros']].sum(axis=1) #homicidio total\n",
-    "homicidio = homicidio.loc[(homicidio['ano'] <= 2010)]\n",
+    "homicidio = homicidio.loc[(homicidio['ano'] == 2010)]\n",
     "homicidio_filtrado = homicidio.loc[:,('ano', 'regiao_ssp', 'Homicidio_total')] #selecionando colunas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -961,32 +961,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2002</td>\n",
+       "      <th>30816</th>\n",
+       "      <td>2010</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2002</td>\n",
+       "      <th>30817</th>\n",
+       "      <td>2010</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2002</td>\n",
+       "      <th>30818</th>\n",
+       "      <td>2010</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2002</td>\n",
+       "      <th>30819</th>\n",
+       "      <td>2010</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2002</td>\n",
+       "      <th>30820</th>\n",
+       "      <td>2010</td>\n",
        "      <td>Presidente Prudente</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
@@ -997,58 +997,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99943</th>\n",
-       "      <td>2009</td>\n",
-       "      <td>São José do Rio Preto</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99944</th>\n",
-       "      <td>2009</td>\n",
+       "      <th>38491</th>\n",
+       "      <td>2010</td>\n",
        "      <td>São José do Rio Preto</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99945</th>\n",
-       "      <td>2009</td>\n",
+       "      <th>38492</th>\n",
+       "      <td>2010</td>\n",
        "      <td>São José do Rio Preto</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99946</th>\n",
-       "      <td>2009</td>\n",
+       "      <th>38493</th>\n",
+       "      <td>2010</td>\n",
        "      <td>São José do Rio Preto</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99947</th>\n",
-       "      <td>2009</td>\n",
+       "      <th>38494</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>São José do Rio Preto</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38495</th>\n",
+       "      <td>2010</td>\n",
        "      <td>São José do Rio Preto</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>69228 rows × 3 columns</p>\n",
+       "<p>7680 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "        ano             regiao_ssp  Homicidio_total\n",
-       "0      2002    Presidente Prudente              0.0\n",
-       "1      2002    Presidente Prudente              0.0\n",
-       "2      2002    Presidente Prudente              0.0\n",
-       "3      2002    Presidente Prudente              0.0\n",
-       "4      2002    Presidente Prudente              0.0\n",
+       "30816  2010    Presidente Prudente              0.0\n",
+       "30817  2010    Presidente Prudente              0.0\n",
+       "30818  2010    Presidente Prudente              0.0\n",
+       "30819  2010    Presidente Prudente              0.0\n",
+       "30820  2010    Presidente Prudente              0.0\n",
        "...     ...                    ...              ...\n",
-       "99943  2009  São José do Rio Preto              1.0\n",
-       "99944  2009  São José do Rio Preto              0.0\n",
-       "99945  2009  São José do Rio Preto              0.0\n",
-       "99946  2009  São José do Rio Preto              0.0\n",
-       "99947  2009  São José do Rio Preto              0.0\n",
+       "38491  2010  São José do Rio Preto              0.0\n",
+       "38492  2010  São José do Rio Preto              0.0\n",
+       "38493  2010  São José do Rio Preto              0.0\n",
+       "38494  2010  São José do Rio Preto              0.0\n",
+       "38495  2010  São José do Rio Preto              0.0\n",
        "\n",
-       "[69228 rows x 3 columns]"
+       "[7680 rows x 3 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,18 +1066,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
     "ivs_filtrado = ivs.loc[:,('ano','sigla_uf','idhm','proporcao_crianca_fora_escola_6_14','proporcao_vulnerabilidade_socioeconomica', 'proporcao_sem_agua_esgoto','indice_gini')]\n",
-    "ivs_t = ivs_filtrado.loc[(ivs['sigla_uf'] == 'SP') & (ivs['ano'] <= 2010)]\n",
-    "ivs_remover = ivs_t[ivs_t['sigla_uf'] == 2000].index"
+    "ivs_t = ivs_filtrado.loc[(ivs['sigla_uf'] == 'SP') & (ivs['ano'] == 2010)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1112,54 +1111,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>190608</th>\n",
-       "      <td>2000</td>\n",
+       "      <th>226934</th>\n",
+       "      <td>2010</td>\n",
        "      <td>SP</td>\n",
-       "      <td>0.745</td>\n",
-       "      <td>1.44</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.93</td>\n",
-       "      <td>0.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190609</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>0.675</td>\n",
-       "      <td>1.17</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190610</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>0.680</td>\n",
-       "      <td>4.96</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.49</td>\n",
-       "      <td>0.57</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190611</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>0.710</td>\n",
-       "      <td>2.09</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.58</td>\n",
-       "      <td>0.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190612</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>SP</td>\n",
-       "      <td>0.597</td>\n",
-       "      <td>8.23</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.74</td>\n",
+       "      <td>0.819</td>\n",
+       "      <td>1.81</td>\n",
+       "      <td>2.38</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226935</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>0.735</td>\n",
+       "      <td>1.51</td>\n",
+       "      <td>5.45</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226936</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>0.742</td>\n",
+       "      <td>3.70</td>\n",
+       "      <td>9.76</td>\n",
+       "      <td>0.49</td>\n",
+       "      <td>0.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226937</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>0.774</td>\n",
+       "      <td>2.94</td>\n",
+       "      <td>14.06</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226938</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>0.736</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>2.68</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.44</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1177,7 +1176,7 @@
        "      <td>SP</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
@@ -1223,16 +1222,16 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>42177 rows × 7 columns</p>\n",
+       "<p>21070 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         ano sigla_uf   idhm  proporcao_crianca_fora_escola_6_14  \\\n",
-       "190608  2000       SP  0.745                                1.44   \n",
-       "190609  2000       SP  0.675                                1.17   \n",
-       "190610  2000       SP  0.680                                4.96   \n",
-       "190611  2000       SP  0.710                                2.09   \n",
-       "190612  2000       SP  0.597                                8.23   \n",
+       "226934  2010       SP  0.819                                1.81   \n",
+       "226935  2010       SP  0.735                                1.51   \n",
+       "226936  2010       SP  0.742                                3.70   \n",
+       "226937  2010       SP  0.774                                2.94   \n",
+       "226938  2010       SP  0.736                                0.60   \n",
        "...      ...      ...    ...                                 ...   \n",
        "319562  2010       SP    NaN                                 NaN   \n",
        "319563  2010       SP    NaN                                 NaN   \n",
@@ -1241,24 +1240,24 @@
        "319566  2010       SP    NaN                                 NaN   \n",
        "\n",
        "        proporcao_vulnerabilidade_socioeconomica  proporcao_sem_agua_esgoto  \\\n",
-       "190608                                       NaN                       0.93   \n",
-       "190609                                       NaN                       0.72   \n",
-       "190610                                       NaN                       0.49   \n",
-       "190611                                       NaN                       0.58   \n",
-       "190612                                       NaN                       0.74   \n",
+       "226934                                      2.38                       0.00   \n",
+       "226935                                      5.45                       0.00   \n",
+       "226936                                      9.76                       0.49   \n",
+       "226937                                     14.06                       0.00   \n",
+       "226938                                      2.68                       0.61   \n",
        "...                                          ...                        ...   \n",
-       "319562                                       0.0                       0.00   \n",
+       "319562                                      0.00                       0.00   \n",
        "319563                                       NaN                       0.00   \n",
        "319564                                       NaN                       0.00   \n",
        "319565                                       NaN                       0.00   \n",
        "319566                                       NaN                       0.00   \n",
        "\n",
        "        indice_gini  \n",
-       "190608         0.53  \n",
-       "190609         0.40  \n",
-       "190610         0.57  \n",
-       "190611         0.54  \n",
-       "190612         0.52  \n",
+       "226934         0.52  \n",
+       "226935         0.39  \n",
+       "226936         0.51  \n",
+       "226937         0.41  \n",
+       "226938         0.44  \n",
        "...             ...  \n",
        "319562         0.00  \n",
        "319563         0.00  \n",
@@ -1266,145 +1265,16 @@
        "319565         0.25  \n",
        "319566          NaN  \n",
        "\n",
-       "[42177 rows x 7 columns]"
+       "[21070 rows x 7 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ivs_t"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ano</th>\n",
-       "      <th>regiao_ssp</th>\n",
-       "      <th>Homicidio_total</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Presidente Prudente</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Presidente Prudente</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Presidente Prudente</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Presidente Prudente</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>Presidente Prudente</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153871</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>São José do Rio Preto</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153872</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>São José do Rio Preto</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153873</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>São José do Rio Preto</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153874</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>São José do Rio Preto</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153875</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>São José do Rio Preto</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>153876 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         ano             regiao_ssp  Homicidio_total\n",
-       "0       2002    Presidente Prudente              0.0\n",
-       "1       2002    Presidente Prudente              0.0\n",
-       "2       2002    Presidente Prudente              0.0\n",
-       "3       2002    Presidente Prudente              0.0\n",
-       "4       2002    Presidente Prudente              0.0\n",
-       "...      ...                    ...              ...\n",
-       "153871  2014  São José do Rio Preto              0.0\n",
-       "153872  2014  São José do Rio Preto              0.0\n",
-       "153873  2014  São José do Rio Preto              0.0\n",
-       "153874  2014  São José do Rio Preto              0.0\n",
-       "153875  2014  São José do Rio Preto              0.0\n",
-       "\n",
-       "[153876 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "homicidio_filtrado"
    ]
   },
   {
