--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -8,9 +8,9 @@
     "\n",
     "### Autores: Diego Guimarães Nuñez, Felipe Bakowski Nantes de Souza, Gustavo de Lima Mota\n",
     "\n",
-    "### Tema: Conseguimos prever o número de homicídios da cidade de São Paulo por ano?\n",
+    "### Tema: Conseguimos prever o número de homicídios totais das cidades que não são capital por ano, no estado de São Paulo?\n",
     "\n",
-    "### Features: PIB de São Paulo, Índice do Custo de Vida (ICV), Escolaridade, Tráfico de Drogas e Desemprego."
+    "### Features: IDH por município, Proporção de crianças (6-14 anos) fora da escola, Proporção de vulnerabilidade socioeconêmica, Proporção de pessoas sem água e esgoto, e Índice de Gini por município."
    ]
   },
   {
