--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -3121,7 +3121,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TESTANDO !!!"
+    "## TESTANDO !!!\n",
+    "\n",
+    "## O objetivo é o seguinte : criar um modelo melhor sem ter que deletar pontos, para isso, estou tentando fazer a TAXA de homicidio e mudando algumas features"
    ]
   },
   {
