--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,9 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from IPython.display import display\n",
     "import seaborn as sns\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
    ]
   },
   {
@@ -2962,10 +2964,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeRegressor()"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arvore_regressao = DecisionTreeRegressor()\n",
+    "\n",
+    "Xa = df_treino[['idhm','renda_per_capita','proporcao_analfabetismo_15_mais', 'proporcao_sem_renda_18_mais','indice_gini']]\n",
+    "Ya = df_treino['Homicidio_total']\n",
+    "\n",
+    "arvore_regressao.fit(Xa, Ya)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9.664921465968586\n",
+      "455.4554973821989\n",
+      "0.1313480499304629\n"
+     ]
+    }
+   ],
+   "source": [
+    "Xteste = df_teste[['idhm','renda_per_capita','proporcao_analfabetismo_15_mais', 'proporcao_sem_renda_18_mais','indice_gini']]\n",
+    "Yteste = df_teste['Homicidio_total']\n",
+    "\n",
+    "prev_y = arvore_regressao.predict(Xteste)\n",
+    "\n",
+    "mae = mean_absolute_error(Yteste, prev_y)\n",
+    "mse = mean_squared_error(Yteste, prev_y)\n",
+    "r2 = r2_score(Yteste, prev_y)\n",
+    "\n",
+    "print(mae)\n",
+    "print(mse)\n",
+    "print(r2)"
+   ]
   }
  ],
  "metadata": {
