--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -8,16 +8,23 @@
     "\n",
     "### Autores: Diego Guimarães Nuñez, Felipe Bakowski Nantes de Souza, Gustavo de Lima Mota\n",
     "\n",
-    "### Tema: Conseguimos prever o número de homicídios nos municípios do Estado de SP, que não são capital, em um ano no estado de São Paulo?\n",
+    "### Tema: Conseguimos prever o número de homicídios nos municípios do Estado de SP em um ano qualquer ?\n",
     "\n",
-    "### Features: IDH por município, Proporção de crianças (6-14 anos) fora da escola, Proporção de vulnerabilidade socioeconêmica, Proporção de pessoas sem água e esgoto, e Índice de Gini por município.\n",
+    "### Features: IDH por município, renda per capita, proporção de pessoas analfabetas com 15 anos ou mais, proporção de pessoas desocupadas com 18 anos ou mais e Índice de Gini por município.\n",
     "\n",
     "### Fonte : basedosdados.org"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Bibliotecas utilizadas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +49,18 @@
     "from sklearn.linear_model import LinearRegression \n",
     "from sklearn import linear_model\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.impute import SimpleImputer"
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.model_selection import cross_val_predict\n",
+    "from sklearn.base import BaseEstimator, RegressorMixin\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Baixando as bases de dados utilizadas no projeto:"
+    "## Baixando as bases de dados utilizadas no projeto\n",
+    "\n",
+    "### Para baixar essas bases, foi necessário baixar a biblioteca basedosdados e criar um projeto no Google Cloud. A primeira base é sobre o número de homícidios em cada município do Estado de São Paulo. Além disso, a segunda base é sobre o índice de vulnerabilidade social do município e traz diversas variáveis que são interessantes de estudar"
    ]
   },
   {
@@ -94,17 +105,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Refletindo sobre os problemas sociais presentes em São Paulo, um dos mais notáveis é a abundante taxa de criminalidade, especificando ainda mais, a taxa de homicídio. Visado a target (problema o qual é pretendido visualizar), foi-se pensado em possíveis targets quais estão ligadas com o tema tido em vista, que são: Índice de Gini, Indice de desenvolvimento Humano, Proporcao de populacao sem esgoto, Proporcao de crianças que sairam da escola entre 6 a 14 anos e Proporcao de Vulnerabilidade Socioeconomica.\n",
-    "## Tendo em vista a target com suas respectivas features, é pretendido realizar a criação de um modelo com capacidade de previsão para a criminalidade, entendendo intrinsicamente as relações individuais de cada feature com a target. A partir da criação do modelo, é facilitada a visão das 'raízes' do problema, possibilitando possíveis tomadas de decisões pessoais e governamentais para tratar esse severo problema."
+    "## Contextualização\n",
+    "\n",
+    "### Refletindo sobre os problemas sociais presentes em São Paulo, um dos mais notáveis é a abundante taxa de criminalidade, especificando ainda mais, a taxa de homicídio. Visado a target (problema o qual é pretendido visualizar), foi-se pensado em possíveis features que estão ligadas com o tema tido em vista, as quais são: Índice de Gini, Indice de desenvolvimento Humano, proporção de populacao desocupada, proporção de pessoas analfabetas e Índice de Gini.\n",
+    "\n",
+    "### Tendo em vista a target com suas respectivas features, é pretendido realizar a criação de dois modelos com capacidade de previsão para a criminalidade, entendendo intrinsicamente as relações individuais de cada feature com a target. A partir da criação deles, é facilitada a visão das 'raízes' do problema, possibilitando possíveis tomadas de decisões pessoais e governamentais para tratar esse severo problema.\n",
+    "\n",
+    "### Por fim, planejamos fazer um modelo de regressão linear e um modelo de Machine Learning, usando Random Forest"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Primeiramente, vamos tratar a base de dados de homicidios e deixá-la mais visualizável\n",
-    "\n",
-    "### Além disso, estamos retirando a Capital SP da análise, pois, ela se comporta de maneira muito distinta em relação ao interior, resultando em dados muito aberrantes. Assim, consideramos que ela é um outlier e deve ser retirada para realizarmos uma melhor análise"
+    " ## Análise exploratória"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Primeiramente, vamos tratar a base de dados de homicidios e deixá-la mais visualizável"
    ]
   },
   {
@@ -123,12 +144,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Agora devemos tratar a base IVS, para que, consigamos utilizar as colunas:  Prop_crianca_fora_escola_6_14, IDHM (IDH por municipio), Proporção_vulnerabilidade_socioeconomica (proporção de pessoas com renda per capita inferior a meio salario mínimo e que gastam mais de uma hora até chegar no trabalho), proporção_sem_agua_esgoto, Índice de Gini"
+    " ### Agora devemos tratar a base IVS, para que, consigamos utilizar as colunas:  'renda_per_capita', 'idhm' (IDH por municipio), 'proporcao_analfabetismo_15_mais', 'proporcao_sem_renda_18_mais', 'proporcao_sem_renda_18_mais'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#filtrando ivs\n",
+    "ivs_filtrado = ivs.loc[:,('ano','id_municipio','sigla_uf','idhm','renda_per_capita','proporcao_analfabetismo_15_mais', 'proporcao_sem_renda_18_mais','proporcao_sem_renda_18_mais')]\n",
+    "ivs_t = ivs_filtrado.loc[(ivs['sigla_uf'] == 'SP') & (ivs['ano'] == 2010)]\n",
+    "ivs_novo = ivs_t.dropna()\n",
+    "ivs_novo2 = ivs_novo.drop_duplicates(subset='id_municipio', keep = 'first')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Então, juntaremos esses dois dataframes em uma grande tabela, para que seja possível trabalhar com as informações de maneira congrunete (mesmo número de linhas, municípios alinhados, etc)\n",
+    "\n",
+    "### Nota: A capital São Paulo foi retirada da análise devido a motivos que iremos discutir depois"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +200,7 @@
        "      <th>renda_per_capita</th>\n",
        "      <th>proporcao_analfabetismo_15_mais</th>\n",
        "      <th>proporcao_sem_renda_18_mais</th>\n",
-       "      <th>indice_gini</th>\n",
+       "      <th>proporcao_sem_renda_18_mais</th>\n",
        "      <th>Homicidio_total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -179,7 +222,7 @@
        "      <td>802.356620</td>\n",
        "      <td>6.071049</td>\n",
        "      <td>3.066182</td>\n",
-       "      <td>0.456135</td>\n",
+       "      <td>3.066182</td>\n",
        "      <td>5.244131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -189,7 +232,7 @@
        "      <td>240.292539</td>\n",
        "      <td>2.441283</td>\n",
        "      <td>2.853549</td>\n",
-       "      <td>0.059192</td>\n",
+       "      <td>2.853549</td>\n",
        "      <td>13.881830</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -199,7 +242,7 @@
        "      <td>348.790000</td>\n",
        "      <td>1.010000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.320000</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -209,7 +252,7 @@
        "      <td>649.415000</td>\n",
        "      <td>4.280000</td>\n",
        "      <td>1.290000</td>\n",
-       "      <td>0.410000</td>\n",
+       "      <td>1.290000</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -219,7 +262,7 @@
        "      <td>761.590000</td>\n",
        "      <td>5.840000</td>\n",
        "      <td>2.080000</td>\n",
-       "      <td>0.450000</td>\n",
+       "      <td>2.080000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -229,7 +272,7 @@
        "      <td>904.240000</td>\n",
        "      <td>7.485000</td>\n",
        "      <td>3.835000</td>\n",
-       "      <td>0.490000</td>\n",
+       "      <td>3.835000</td>\n",
        "      <td>4.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -239,7 +282,7 @@
        "      <td>2729.860000</td>\n",
        "      <td>17.090000</td>\n",
        "      <td>24.480000</td>\n",
-       "      <td>0.740000</td>\n",
+       "      <td>24.480000</td>\n",
        "      <td>168.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -257,29 +300,33 @@
        "75%    2010.0    0.785000        904.240000                         7.485000   \n",
        "max    2010.0    0.891000       2729.860000                        17.090000   \n",
        "\n",
-       "       proporcao_sem_renda_18_mais  indice_gini  Homicidio_total  \n",
-       "count                   639.000000   639.000000       639.000000  \n",
-       "mean                      3.066182     0.456135         5.244131  \n",
-       "std                       2.853549     0.059192        13.881830  \n",
-       "min                       0.000000     0.320000         0.000000  \n",
-       "25%                       1.290000     0.410000         0.000000  \n",
-       "50%                       2.080000     0.450000         1.000000  \n",
-       "75%                       3.835000     0.490000         4.000000  \n",
-       "max                      24.480000     0.740000       168.000000  "
+       "       proporcao_sem_renda_18_mais  proporcao_sem_renda_18_mais  \\\n",
+       "count                   639.000000                   639.000000   \n",
+       "mean                      3.066182                     3.066182   \n",
+       "std                       2.853549                     2.853549   \n",
+       "min                       0.000000                     0.000000   \n",
+       "25%                       1.290000                     1.290000   \n",
+       "50%                       2.080000                     2.080000   \n",
+       "75%                       3.835000                     3.835000   \n",
+       "max                      24.480000                    24.480000   \n",
+       "\n",
+       "       Homicidio_total  \n",
+       "count       639.000000  \n",
+       "mean          5.244131  \n",
+       "std          13.881830  \n",
+       "min           0.000000  \n",
+       "25%           0.000000  \n",
+       "50%           1.000000  \n",
+       "75%           4.000000  \n",
+       "max         168.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#filtrando ivs\n",
-    "ivs_filtrado = ivs.loc[:,('ano','id_municipio','sigla_uf','idhm','renda_per_capita','proporcao_analfabetismo_15_mais', 'proporcao_sem_renda_18_mais','indice_gini')]\n",
-    "ivs_t = ivs_filtrado.loc[(ivs['sigla_uf'] == 'SP') & (ivs['ano'] == 2010)]\n",
-    "ivs_novo = ivs_t.dropna()\n",
-    "ivs_novo2 = ivs_novo.drop_duplicates(subset='id_municipio', keep = 'first')\n",
-    "\n",
     "#criando tabela \n",
     "tabela_final = pd.merge(ivs_novo2, homicidio_ano[['id_municipio', 'Homicidio_total']], on='id_municipio', how='left')\n",
     "tabela_definitiva = tabela_final.dropna()\n",
@@ -320,7 +367,7 @@
    "source": [
     "### Entendendo como a target (homicídio) se comporta em relação aos municípios\n",
     "\n",
-    "### De início, tem-se um crosstab da porcentagem de homicícios, por município, em 2010.Além de, um gráfico de barras do homicídio, no Estado, dos municípios. Tal que, este será utilizado para a validação do modelo no futuro"
+    "### De início, tem-se um crosstab que mostra quantos municípios tiveram X homicídios em 2010. Ademais, plotamos um gráfico de barras e um gráfico de disperção para obtermos elementos visuais que ajudam na análise"
    ]
   },
   {
@@ -1854,9 +1901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Por fim, plota-se os gráficos de dispersão + .corr\n",
-    "\n",
-    "### Nota: Esses gráficos de dispersão são referentes ao ano 2010"
+    "### Por fim, plota-se os gráficos de disperção de features VS target e mostra-se a correlação entre elas, respectivamente. Além disso, tem-se um boxplot do número de homicídios para visualizarmos como a nossa target se distribui"
    ]
   },
   {
@@ -1968,7 +2013,7 @@
    "source": [
     "### Possíveis fontes de erro:\n",
     "\n",
-    "### Ao analisarmos a função .agg observamos que ela fazia com que existisse alguns pontos aberrantes, por exemplo, em sp tinhamos 1260 homicídios. Logo, tiramos esse ponto aberrante e trabalharemos com essa possibilidade de erro para as próximas análises"
+    "### Alguns municípios tem pontos muito aberrantes e fazem com que a análise não seja tão precisa. Um caso que exemplifica bem esse ponto é a capital São Paula, enquanto os outros municípios não passavam de 200 homicídios, aquela estava com 1260 e causava grande desequilíbrio na análise. Logo, julgamos que foi melhor retirá-la"
    ]
   },
   {
@@ -2763,7 +2808,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ### Validando a regressão linear"
+    " ## Aplicando validação cruzada na regressão\n",
+    "\n",
+    " ### Nesse método, divide-se o conjunto em 10 subconjuntos(ciclos) e treiná-o em conjunto para ele ser testado em outra parte. Assim, obtêm-se um método confiável de avaliar o desempenho do modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE durante a validação cruzada: 16.378287998648617\n"
+     ]
+    }
+   ],
+   "source": [
+    "class StatsmodelsWrapper(BaseEstimator, RegressorMixin):\n",
+    "    def __init__(self, model):\n",
+    "        self.model = model\n",
+    "    \n",
+    "    def fit(self, X, y):\n",
+    "        X_cp = sm.add_constant(X)\n",
+    "        self.model = self.model(y, X_cp).fit()\n",
+    "        return self\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        X_cp = sm.add_constant(X)\n",
+    "        return self.model.predict(X_cp)\n",
+    "\n",
+    "# Suponha que 'X' são suas features e 'y' é o seu target\n",
+    "X = df_modelo1[['renda_per_capita', 'proporcao_analfabetismo_15_mais']]\n",
+    "y = df_modelo1['Homicidio_total']\n",
+    "\n",
+    "# Criar uma instância da classe wrapper\n",
+    "wrapper_model = StatsmodelsWrapper(sm.OLS)\n",
+    "\n",
+    "# Use cross_val_predict para fazer previsões durante a validação cruzada\n",
+    "y_pred_cv = cross_val_predict(wrapper_model, X, y, cv=10)  # cv é o número de folds (k)\n",
+    "\n",
+    "# Calcule a métrica desejada, por exemplo, o RMSE\n",
+    "rmse = np.sqrt(mean_squared_error(y, y_pred_cv))\n",
+    "\n",
+    "print(\"RMSE durante a validação cruzada:\", rmse)"
    ]
   },
   {
