--- a/p2_cdados.ipynb
+++ b/p2_cdados.ipynb
@@ -3175,18 +3175,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusão:\n",
+    "Passado todo o desenvolvimento do projeto, podemos finalmente tirar as conclusões. Tendo em vista que o objetivo dele foi criar um modelo preditivo capaz de sugerir o número de homicídios no estado de São Paulo (sem contar a capital) em um determinado ano, passamos por uma série de etapas para atingir esse objetivo.\n",
+    "\n",
+    "Todos os passos do projeto apresentaram desafios, porém todos tiveram que ser driblados a fim de um melhor resultado. Na primeira etapa, a de mineração de dados, a escolha das melhores bases de dados é crucial. Entender as estruturas e informações nelas contidas é de suma importância para o desenvolvimento do projeto.\n",
+    "\n",
+    "A segunda etapa, a de fazer a fusão de informações de duas bases de dados, também foi uma tarefa que exigiu capricho e cuidado. Por precisarmos garantir que o ano e os municípios dos números (Número de homicídios, IDH, Índice de Gini, etc.) fossem equivalentes de uma base para outra, a possibilidade de cruzarmos de maneira errada era grande. Esse erro afetaria bastante naa predição final, porém todos os cuidados foram tomados para isso não ocorrer.\n",
+    "\n",
+    "Com o DataFrame final (junção das duas bases de dados) em mãos, As análises começaram a serem feitas. Coeficientes de correlação foram traçados, entre target e features. Percebemos que nenhuma das features apresentaram grande correlação, por outro lado, em nenhuma delas essa correlação foi nula. Logo, entendemos que as features tinham relação direta com a target de alguma forma. Para melhores interpretações ainda, um \"heatmap\" com as correalções entre target e features, e features e features, foi plotado. Desse modo, pudemos visualizar o modo como as features se relacionavam entre si. O resultado disso foi interessante, evidentemente algumas features se relacionaram mais fortemente com outras.\n",
+    "\n",
+    "Em seguida, plotamos um gráfico do tipo \"scatter\" para cada feature, tendo ela no eixo \"x\" e o número de homicídios no eixo \"y\". Isso foi importante para percebermos a dispersão dos dados em cada uma e visualizar melhor o que o coeficiente de correlação nos falava. Um \"boxplot\" dos homicídios também foi feito, com ele percebemos uma grande amplitude entre os dados contendo muitos \"outliers\", além de identificarmos uma baixa mediana, causada pela grande quantidade de municípios de São Paulo com o número de homicídios baixo (muitos deles com número zero)."
+   ]
   }
  ],
  "metadata": {
